package com.mygdx.game.traffic;

public interface Movable{
    void accelerate();
    void move();
}
